fix: modal fixed + overflow auto

--- a/src/components/Modal/index.module.scss
+++ b/src/components/Modal/index.module.scss
@@ -4,9 +4,11 @@
 .Modal {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   top: 20%;
   left: 10%;
+  height: 62%;
+  overflow-y: auto;
   background-color: black;
   color: #fff;
   width: 80vw;
